--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "canvas-confetti": "^1.9.4",
     "framer-motion": "^12.27.0",
     "idb": "^8.0.3",
+    "lucide-react": "^0.562.0",
     "next": "16.1.3",
     "react": "19.2.3",
     "react-dom": "19.2.3",
