--- a/package.json
+++ b/package.json
@@ -17,15 +17,18 @@
     "@tailwindcss/typography": "^0.5.19",
     "ai": "^6.0.39",
     "canvas-confetti": "^1.9.4",
+    "diff": "^8.0.3",
     "framer-motion": "^12.27.0",
     "idb": "^8.0.3",
     "lucide-react": "^0.562.0",
     "next": "16.1.3",
     "react": "19.2.3",
+    "react-diff-view": "^3.3.2",
     "react-dom": "19.2.3",
     "react-markdown": "^10.1.0",
     "rehype-raw": "^7.0.0",
     "remark-gfm": "^4.0.1",
+    "unidiff": "^1.0.4",
     "uuid": "^13.0.0"
   },
   "devDependencies": {
